# qt_gui_qss

./: .gitignore  README.md
QStyleWidget/: qstylewidget.cpp  qstylewidget.h  qt_gui_qss.pro
mingw64_cmake/: CMakeLists.txt  main.cpp
mingw64_qmake/: main.cpp  qt_gui_qss.pro
